<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Forrest Guice
    This file is part of Thunder-Stopwatch.

    Thunder-Stopwatch is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Thunder-Stopwatch is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Thunder-Stopwatch.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_settings">

	<PreferenceCategory android:title="Appearance">

        <!-- Timer View -->
        <ListPreference
            android:key="timerview"
            android:title="@string/pref_timerview_title"
            android:summary="@string/pref_timerview_summary"
            android:defaultValue="analog"
            android:entries="@array/timerview_list_labels"
            android:entryValues="@array/timerview_list_values" />

        <!-- UI Theme (light / dark) -->
        <ListPreference
			android:key="theme"
			android:title="@string/pref_theme_title"
			android:summary="@string/pref_theme_summary"
			android:defaultValue="dark"
			android:entries="@array/theme_list_labels"
			android:entryValues="@array/theme_list_values" />
	     
	   	<!-- Enable Transition Animations -->
		<CheckBoxPreference
			android:key="animate_transitions"
			android:title="@string/preference_animate_title"
			android:summary="@string/preference_animate_summary"
			android:defaultValue="true" />

	</PreferenceCategory>
    
	<PreferenceCategory android:title="General">

		<!-- Units -->
		<ListPreference
			android:key="units"
			android:title="@string/preference_units_title"
			android:summary="@string/preference_units_summary"
			android:defaultValue="mi"
			android:entries="@array/units"
			android:entryValues="@array/units_values" />

		<!-- Use Camera Button -->
		<CheckBoxPreference
			android:key="flag_camerabutton"
			android:title="@string/pref_camerabutton_title"
			android:summary="@string/pref_camerabutton_summary"
			android:defaultValue="true" />
		
		<!-- Enable Quick Touch -->
		<CheckBoxPreference
			android:key="flag_quicktouch"
			android:title="@string/pref_quicktouch_title"
			android:summary="@string/pref_quicktouch_summary"
			android:defaultValue="true" />

	</PreferenceCategory>
	
	<PreferenceCategory android:title="History">
	
		<!-- Enable Logging -->
		<CheckBoxPreference
			android:key="use_log"
			android:title="@string/preference_logging_title"
			android:summary="@string/preference_logging_summary"
			android:defaultValue="true" />
		
		<!-- List Dataset Size -->
        <com.forrestguice.android.SeekBarPreference
            android:key="history_dataset_size"
            android:title="@string/preference_history_dataset_title"
            android:summary="@string/preference_history_dataset_summary"
            android:defaultValue="15"            
            android:minLines="5"
            android:maxLines="25"
            android:dialogMessage="@string/preference_history_dataset_dialog_msg"
            android:text="@string/preference_history_dataset_dialog_suffix" />
	    
		<!-- Graph Dataset Size -->
        <com.forrestguice.android.SeekBarPreference
            android:key="graph_dataset_size"
            android:title="@string/preference_graph_dataset_title"
            android:summary="@string/preference_graph_dataset_summary"
            android:defaultValue="5"            
            android:minLines="2"
            android:maxLines="20"
            android:dialogMessage="@string/preference_graph_dataset_dialog_msg"
            android:text="@string/preference_graph_dataset_dialog_suffix" />
        
        <!-- Graph Dataset Timeframe -->
        <com.forrestguice.android.SeekBarPreference
            android:key="graph_dataset_bracket"
            android:title="@string/preference_graph_bracket_title"
            android:summary="@string/preference_graph_bracket_summary"
            android:defaultValue="6"            
            android:minLines="1"
            android:maxLines="12"
            android:dialogMessage="@string/preference_graph_bracket_dialog_msg"
            android:text="@string/preference_graph_bracket_dialog_suffix" />
        
    </PreferenceCategory>
</PreferenceScreen>
