<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2010 Forrest Guice
    This file is part of Thunder-Stopwatch.

    Thunder-Stopwatch is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Thunder-Stopwatch is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Thunder-Stopwatch.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<!-- Time Row -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<EditText android:id="@+id/txt_distance_time" style="@style/InputFieldStyle"
			android:layout_marginLeft="5dp" android:hint="@string/distance_time_hint"
			android:layout_gravity="center_vertical">
			<requestFocus />
		</EditText>

		<TextView 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="5dp" android:layout_marginRight="5dp"
			android:text=" s "
			android:layout_gravity="center_vertical" />

	</LinearLayout>

	<!-- Distance Row -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<EditText android:id="@+id/txt_distance_dist" style="@style/InputFieldStyle"
			android:layout_marginLeft="5dp" android:hint="@string/distance_dist_hint"
			android:layout_gravity="center_vertical" />

		<Button android:id="@+id/btn_distance_units"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text=" mi "
			android:layout_gravity="center_vertical" />

	</LinearLayout>

	<!-- Close Button -->
	<Button android:id="@+id/btn_distance_close"
		android:layout_marginLeft="5dp" android:layout_marginBottom="5dp"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:text="@string/close" />

</LinearLayout>
